map file for label

--- a/leo/votingClf.ipynb
+++ b/leo/votingClf.ipynb
@@ -699,6 +699,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(dicts,open('data/map.pkl','wb'))\n",
+    "pickle.dump(dicts_ch,open('data/map_reverse.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'Hi-hat',\n",
+       " 1: 'Saxophone',\n",
+       " 2: 'Trumpet',\n",
+       " 3: 'Glockenspiel',\n",
+       " 4: 'Cello',\n",
+       " 5: 'Knock',\n",
+       " 6: 'Gunshot_or_gunfire',\n",
+       " 7: 'Clarinet',\n",
+       " 8: 'Computer_keyboard',\n",
+       " 9: 'Keys_jangling',\n",
+       " 10: 'Snare_drum',\n",
+       " 11: 'Writing',\n",
+       " 12: 'Laughter',\n",
+       " 13: 'Tearing',\n",
+       " 14: 'Fart',\n",
+       " 15: 'Oboe',\n",
+       " 16: 'Flute',\n",
+       " 17: 'Cough',\n",
+       " 18: 'Telephone',\n",
+       " 19: 'Bark',\n",
+       " 20: 'Chime',\n",
+       " 21: 'Bass_drum',\n",
+       " 22: 'Bus',\n",
+       " 23: 'Squeak',\n",
+       " 24: 'Scissors',\n",
+       " 25: 'Harmonica',\n",
+       " 26: 'Gong',\n",
+       " 27: 'Microwave_oven',\n",
+       " 28: 'Burping_or_eructation',\n",
+       " 29: 'Double_bass',\n",
+       " 30: 'Shatter',\n",
+       " 31: 'Fireworks',\n",
+       " 32: 'Tambourine',\n",
+       " 33: 'Cowbell',\n",
+       " 34: 'Electric_piano',\n",
+       " 35: 'Meow',\n",
+       " 36: 'Drawer_open_or_close',\n",
+       " 37: 'Applause',\n",
+       " 38: 'Acoustic_guitar',\n",
+       " 39: 'Violin_or_fiddle',\n",
+       " 40: 'Finger_snapping'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pickle.load(open('data/map_reverse.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "scrolled": true
