update phase1 and 2 code

--- a/leo/votingClf.ipynb
+++ b/leo/votingClf.ipynb
@@ -703,8 +703,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(dicts,open('data/map.pkl','wb'))\n",
-    "pickle.dump(dicts_ch,open('data/map_reverse.pkl','wb'))"
+    "# pickle.dump(dicts,open('data/map.pkl','wb'))\n",
+    "# pickle.dump(dicts_ch,open('data/map_reverse.pkl','wb'))"
    ]
   },
   {
@@ -764,7 +764,7 @@
     }
    ],
    "source": [
-    "pickle.load(open('data/map_reverse.pkl','rb'))"
+    "# pickle.load(open('data/map_reverse.pkl','rb'))"
    ]
   },
   {
