--- a/leo/stacking.ipynb
+++ b/leo/stacking.ipynb
@@ -15873,6 +15873,18 @@
    "display_name": "Python [conda env:anaconda3]",
    "language": "python",
    "name": "conda-env-anaconda3-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
