--- a/leo/stacking.ipynb
+++ b/leo/stacking.ipynb
@@ -180,7 +180,7 @@
     "#     print(df.values)\n",
     "    if i==0:\n",
     "        train_X = df.values\n",
-    "        train_X2 = df.values\n",
+    "        train_X2 = df.values*ratio\n",
     "    else:\n",
     "        train_X = np.concatenate((train_X,df.values),axis=1)\n",
     "        train_X2 += df.values*ratio \n",
