update meeting time

--- a/leo/Stage1Phase2-XGB.ipynb
+++ b/leo/Stage1Phase2-XGB.ipynb
@@ -770,7 +770,17 @@
       "   75 | 00m47s |   -0.15391 |              0.9131 |             0.9040 |    0.7431 |           9.1974 |      1.0000 |            10.9470 |      1130.7768 |      0.2746 |      84.7922 |      0.9833 | \n",
       "   76 | 00m50s |   -0.15903 |              0.9001 |             0.8172 |    0.9927 |           0.0094 |      1.0000 |            10.4504 |      1120.5046 |      0.0244 |      70.0854 |      0.9830 | \n",
       "   77 | 00m54s |   -0.16092 |              0.9338 |             0.8676 |    0.9319 |           9.8418 |      1.0000 |            10.1881 |      1134.9184 |      0.1671 |      84.6758 |      0.9881 | \n",
-      "   78 | 00m59s |   -0.15768 |              0.9021 |             0.9343 |    0.0113 |           7.3438 |      1.0000 |            10.9329 |      1130.3962 |      0.2975 |      84.6039 |      0.9317 | \n"
+      "   78 | 00m59s |   -0.15768 |              0.9021 |             0.9343 |    0.0113 |           7.3438 |      1.0000 |            10.9329 |      1130.3962 |      0.2975 |      84.6039 |      0.9317 | \n",
+      "   79 | 00m48s |   -0.16200 |              0.9117 |             0.9719 |    0.7749 |           5.0993 |      1.0000 |             8.0154 |      1128.1735 |      0.1849 |      77.1540 |      0.9568 | \n",
+      "   80 | 00m51s |   -0.15579 |              0.9860 |             0.9436 |    0.0727 |           0.1830 |      1.0000 |             8.1065 |      1120.2159 |      0.0384 |      76.0514 |      0.9068 | \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leoqaz12/anaconda3/lib/python3.6/site-packages/sklearn/gaussian_process/gpr.py:457: UserWarning: fmin_l_bfgs_b terminated abnormally with the  state: {'grad': array([-0.00202128]), 'task': b'ABNORMAL_TERMINATION_IN_LNSRCH', 'funcalls': 60, 'nit': 6, 'warnflag': 2}\n",
+      "  \" state: %s\" % convergence_dict)\n"
      ]
     }
    ],
