update our goal

--- a/leo/LGD_Phase1_pre_10foldVerified.ipynb
+++ b/leo/LGD_Phase1_pre_10foldVerified.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/leoqaz12/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from random import shuffle\n",
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -84,194 +94,47 @@
      "output_type": "stream",
      "text": [
       "['001ca53d.wav' '0033e230.wav' '00353774.wav' ... 'ffd6b26c.wav'\n",
-      " 'ffda1d2b.wav' 'fff81f55.wav']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " 'ffda1d2b.wav' 'fff81f55.wav']\n",
       "Saving fold 1\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|█         | 1/10 [00:04<00:44,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 2\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 20%|██        | 2/10 [00:09<00:39,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 3\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 30%|███       | 3/10 [00:14<00:34,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 4\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 40%|████      | 4/10 [00:19<00:29,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 5\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 50%|█████     | 5/10 [00:24<00:24,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 6\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 60%|██████    | 6/10 [00:29<00:19,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 7\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 70%|███████   | 7/10 [00:34<00:14,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 8\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 80%|████████  | 8/10 [00:39<00:09,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 9\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
-      "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 90%|█████████ | 9/10 [00:44<00:04,  4.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "fname.shape: (371,)\n",
       "Saving fold 10\n",
-      "X.shape: (371, 128, 1034, 1)\n",
+      "X.shape: (371, 64, 88, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:49<00:00,  4.93s/it]\n"
      ]
     }
    ],
@@ -280,7 +143,7 @@
     "map_path = 'data/map.pkl'#sys.argv[1]\n",
     "\n",
     "# base_path = directory of all the data (train_label.csv, X_train.npy)\n",
-    "base_path = 'feature/fbank/'#sys.argv[2]\n",
+    "base_path = 'feature/fbank4/'#sys.argv[2]\n",
     "\n",
     "# num_fold\n",
     "num_fold = 10#int(sys.argv[3])\n",
@@ -332,7 +195,7 @@
     "if not os.path.exists(split_fname_path):\n",
     "    os.makedirs(split_fname_path)\n",
     "\n",
-    "for i in tqdm(range(num_fold)):\n",
+    "for i in range(num_fold):\n",
     "    X = X_all[idx[i*xSize:i*xSize+xSize]]\n",
     "    y = Y_all[idx[i*xSize:i*xSize+xSize]]\n",
     "    fname = fname_all[idx[i*xSize:i*xSize+xSize]]\n",
@@ -371,25 +234,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.load('feature/fbank/X_test.npy')\n",
-    "X_all = np.load('feature/fbank/X_train.npy')"
+    "X_test = np.load('feature/fbank4/X_test.npy')\n",
+    "X_all = np.load('feature/fbank4/X_train.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18873, 64, 88, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.concatenate((X_all, X_test))\n",
     "\n",
-    "\n",
+    "min_ = np.min(X,axis=0)\n",
+    "max_ = np.max(X,axis=0)\n",
+    "range_ = max_ - min_\n",
     "mean = np.mean(X,axis=0)\n",
     "std = np.std(X,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_ = np.min(X)\n",
+    "max_ = np.max(X)\n",
+    "range_ = max_ - min_\n",
+    "mean = np.mean(X)\n",
+    "std = np.std(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "289.99098172319276"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range_"
    ]
   },
   {
@@ -415,12 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('feature/fbank/mean.npy',mean)\n",
-    "np.save('feature/fbank/std.npy',std)"
+    "np.save('feature/fbank4/mean.npy',mean)\n",
+    "np.save('feature/fbank4/std.npy',std)\n",
+    "np.save('feature/fbank4/min.npy',min_)\n",
+    "np.save('feature/fbank4/range.npy',range_)"
    ]
   }
  ],
