--- a/leo/LGD_Phase1Stage3_labelSpreading.ipynb
+++ b/leo/LGD_Phase1Stage3_labelSpreading.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,8 @@
     "from logHandler import Logger\n",
     "from utils import readCSV, getPath, writePickle,readPickle\n",
     "from keras.regularizers import l2\n",
-    "from keras.callbacks import History ,ModelCheckpoint, EarlyStopping"
+    "from keras.callbacks import History ,ModelCheckpoint, EarlyStopping\n",
+    "\n"
    ]
   },
   {
@@ -644,16 +645,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5763"
+       "9400"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +662,8 @@
    "source": [
     "df_un_ans = pd.DataFrame()\n",
     "for fold in range(10):\n",
-    "    un_ans = np.load('feature/fbank4/semi/Y_un_dense'+str(fold)+'.npy')\n",
+    "#     un_ans = np.load('feature/fbank4/semi/Y_un_dense'+str(fold)+'.npy') #unverified data\n",
+    "    un_ans = np.load('feature/fbank4/semi/Y_test_dense'+str(fold)+'.npy') #testing data\n",
     "    df = pd.DataFrame(un_ans).T\n",
     "    df_un_ans = df_un_ans.append(df)\n",
     "col_list = []\n",
@@ -674,21 +676,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{37: 4, 3: 3, 32: 2, 21: 1}\n"
+      "41\n"
      ]
     }
    ],
    "source": [
+    "take_list=[]\n",
+    "take_label=[]\n",
     "for i,stats in enumerate(col_list):\n",
-    "    if max(stats.values()) >=5:\n"
+    "    if max(stats.values()) >=10:\n",
+    "        take_list.append(i)\n",
+    "        ens_label = max(stats.keys(), key=(lambda k: stats[k]))\n",
+    "        take_label.append(ens_label)\n",
+    "print(len(take_list))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAVE\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(38,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(take_label).shape)\n",
+    "# X_un_ver = X_un[take_list]\n",
+    "Y_un_ver = np.array(take_label)\n",
+    "# np.save('feature/mfcc6/semi/fbank4/X_un_ver.npy',X_un_ver)\n",
+    "pickle.dump(take_list,open('feature/mfcc6/semi/fbank4/X_un_ver_list.pkl','wb'))\n",
+    "np.save('feature/mfcc6/semi/fbank4/Y_un_ver.npy',Y_un_ver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(41,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( np.array(take_label).shape)\n",
+    "# X_test_ver = X_test[take_list]\n",
+    "Y_test_ver = np.array(take_label)\n",
+    "# np.save('feature/mfcc6/semi/fbank4/X_test_ver.npy',X_test_ver)\n",
+    "pickle.dump(take_list,open('feature/mfcc6/semi/fbank4/X_test_ver_list.pkl','wb'))\n",
+    "np.save('feature/mfcc6/semi/fbank4/Y_test_ver.npy',Y_test_ver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(38,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_un_ver.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -903,7 +1004,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
