--- a/leo/LGD_Phase1_pre_10foldVerified.ipynb
+++ b/leo/LGD_Phase1_pre_10foldVerified.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -96,43 +96,43 @@
       "['001ca53d.wav' '0033e230.wav' '00353774.wav' ... 'ffd6b26c.wav'\n",
       " 'ffda1d2b.wav' 'fff81f55.wav']\n",
       "Saving fold 1\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 2\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 3\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 4\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 5\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 6\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 7\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 8\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 9\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 10\n",
-      "X.shape: (371, 64, 88, 1)\n",
+      "X.shape: (371, 64, 431, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n"
      ]
@@ -143,7 +143,7 @@
     "map_path = 'data/map.pkl'#sys.argv[1]\n",
     "\n",
     "# base_path = directory of all the data (train_label.csv, X_train.npy)\n",
-    "base_path = 'feature/fbank4/'#sys.argv[2]\n",
+    "base_path = 'feature/mfcc6/'#sys.argv[2]\n",
     "\n",
     "# num_fold\n",
     "num_fold = 10#int(sys.argv[3])\n",
@@ -214,32 +214,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3710, 128, 1034, 1)"
+       "(3710, 64, 431, 1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_all.shape"
+    "# X_all.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.load('feature/fbank4/X_test.npy')\n",
-    "X_all = np.load('feature/fbank4/X_train.npy')"
+    "X_test = np.load('feature/mfcc6/X_test.npy')\n",
+    "X_all = np.load('feature/mfcc6/X_train.npy')"
    ]
   },
   {
@@ -259,17 +259,25 @@
     }
    ],
    "source": [
-    "X.shape"
+    "# X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18873, 64, 431, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.concatenate((X_all, X_test))\n",
-    "\n",
+    "print(X.shape)\n",
     "min_ = np.min(X,axis=0)\n",
     "max_ = np.max(X,axis=0)\n",
     "range_ = max_ - min_\n",
@@ -283,25 +291,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_ = np.min(X)\n",
-    "max_ = np.max(X)\n",
-    "range_ = max_ - min_\n",
-    "mean = np.mean(X)\n",
-    "std = np.std(X)"
+    "# min_ = np.min(X)\n",
+    "# max_ = np.max(X)\n",
+    "# range_ = max_ - min_\n",
+    "# mean = np.mean(X)\n",
+    "# std = np.std(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "289.99098172319276"
+       "array([[[1242.64826948],\n",
+       "        [1242.88633185],\n",
+       "        [1268.99798239],\n",
+       "        ...,\n",
+       "        [1258.79215497],\n",
+       "        [1258.82903343],\n",
+       "        [1263.02693244]],\n",
+       "\n",
+       "       [[ 536.15501748],\n",
+       "        [ 544.35516655],\n",
+       "        [ 559.40674493],\n",
+       "        ...,\n",
+       "        [ 484.62245785],\n",
+       "        [ 479.73208684],\n",
+       "        [ 487.09957474]],\n",
+       "\n",
+       "       [[ 292.23504265],\n",
+       "        [ 324.76049577],\n",
+       "        [ 367.94273228],\n",
+       "        ...,\n",
+       "        [ 360.20881248],\n",
+       "        [ 350.13738414],\n",
+       "        [ 312.37433088]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[  39.71060807],\n",
+       "        [  43.65924078],\n",
+       "        [  73.29228141],\n",
+       "        ...,\n",
+       "        [  63.80741587],\n",
+       "        [  62.02384328],\n",
+       "        [  41.14892323]],\n",
+       "\n",
+       "       [[  30.48704827],\n",
+       "        [  37.14012634],\n",
+       "        [  54.69477386],\n",
+       "        ...,\n",
+       "        [  52.11433432],\n",
+       "        [  53.96625904],\n",
+       "        [  36.98807019]],\n",
+       "\n",
+       "       [[  37.32372715],\n",
+       "        [  38.14258725],\n",
+       "        [  58.57843169],\n",
+       "        ...,\n",
+       "        [  57.55608584],\n",
+       "        [  53.18481054],\n",
+       "        [  31.01495625]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,20 +385,167 @@
     }
    ],
    "source": [
-    "X = (X - mean)/std\n",
-    "X.shape"
+    "# X = (X - mean)/std\n",
+    "# X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('feature/fbank4/mean.npy',mean)\n",
-    "np.save('feature/fbank4/std.npy',std)\n",
-    "np.save('feature/fbank4/min.npy',min_)\n",
-    "np.save('feature/fbank4/range.npy',range_)"
+    "np.save('feature/mfcc6/mean.npy',mean)\n",
+    "np.save('feature/mfcc6/std.npy',std)\n",
+    "np.save('feature/mfcc6/min.npy',min_)\n",
+    "np.save('feature/mfcc6/range.npy',range_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Semi: fbank4 + mfcc6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map_path = path of 'map.pkl'\n",
+    "map_path = 'data/map.pkl'#sys.argv[1]\n",
+    "\n",
+    "# base_path = directory of all the data (train_label.csv, X_train.npy)\n",
+    "base_path = 'feature/mfcc6/'#sys.argv[2]\n",
+    "\n",
+    "\n",
+    "with open(map_path, 'rb') as f:\n",
+    "    map_dict = pickle.load(f)\n",
+    "\n",
+    "verified = []\n",
+    "unverified = []\n",
+    "\n",
+    "train_label_path = os.path.join(base_path, 'train_label.csv')\n",
+    "Y_train = pd.read_csv(train_label_path)\n",
+    "\n",
+    "for i in range(len(Y_train)):\n",
+    "    if Y_train['manually_verified'][i] == 1:\n",
+    "        verified.append(i)\n",
+    "    else:\n",
+    "        unverified.append(i)\n",
+    "\n",
+    "Y_un = Y_train.loc[unverified,:]\n",
+    "\n",
+    "fname_all = Y_un['fname']\n",
+    "fname_all = np.array(fname_all)\n",
+    "\n",
+    "Y_dict = Y_un['label'].map(map_dict)\n",
+    "Y_dict = np.array(Y_dict)\n",
+    "\n",
+    "Y_all = []\n",
+    "for i in Y_dict:\n",
+    "    Y_all.append(to_categorical(i, num_classes=41))\n",
+    "Y_all = np.array(Y_all)\n",
+    "\n",
+    "filename = os.path.join(base_path, 'fname_unverified.npy')\n",
+    "np.save(filename, fname_all)\n",
+    "\n",
+    "filename = os.path.join(base_path, 'y_unverified.npy')\n",
+    "np.save(filename, Y_all)\n",
+    "\n",
+    "X_train_path = os.path.join(base_path, 'X_train.npy')\n",
+    "X_all = np.load(X_train_path)\n",
+    "\n",
+    "X_un = X_all[unverified, :]\n",
+    "filename = os.path.join(base_path, 'X_unverified.npy')\n",
+    "np.save(filename, X_un)\n",
+    "\n",
+    "X_ver = X_all[verified, :]\n",
+    "train_label_path = os.path.join(base_path, 'train_label.csv')\n",
+    "Y_ver = pd.read_csv(train_label_path)\n",
+    "Y_ver = Y_ver.loc[verified,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "take_list = np.load('feature/mfcc6/semi/fbank4/X_un_ver_list.pkl')\n",
+    "X_un_ver = X_un[take_list]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41, 64, 431, 1)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test = np.load('feature/mfcc6/X_test.npy')\n",
+    "take_list = np.load('feature/mfcc6/semi/fbank4/X_test_ver_list.pkl')\n",
+    "X_test_ver = X_test[take_list]\n",
+    "X_test_ver.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(38, 64, 431, 1) (41, 64, 431, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_un_ver.shape,X_test_ver.shape)\n",
+    "np.save('feature/mfcc6/semi/fbank4/X_test_ver.npy',X_test_ver)\n",
+    "np.save('feature/mfcc6/semi/fbank4/X_un_ver.npy',X_un_ver)"
    ]
   }
  ],
