--- a/leo/preprocessing_featureExtracting.ipynb
+++ b/leo/preprocessing_featureExtracting.ipynb
@@ -107,13 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_data_old(df, config, data_dir):\n",
-    "    X = np.empty(shape=(df.shape[0], config.dim[0], config.dim[1], 1)) #MFCC\n",
-    "#     X = np.empty(shape=(df.shape[0], 64, 88, 1)) #FBANK\n",
+    "#     X = np.empty(shape=(df.shape[0], config.dim[0], config.dim[1], 1)) #MFCC\n",
+    "    X = np.empty(shape=(df.shape[0], 60, 259, 1)) #FBANK\n",
     "    input_length = config.audio_length\n",
     "    for i, fname in tqdm(enumerate(df.fname)):\n",
     "#         print(fname)\n",
@@ -146,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_data(df, config, data_dir):\n",
-    "    X = np.empty(shape=(df.shape[0], 15, 1034, 1))\n",
+    "    X = np.empty(shape=(df.shape[0], 64, 431, 1))\n",
     "    input_length = config.audio_length\n",
     "    for i, fname in tqdm(enumerate(df.fname)):\n",
     "#         print(fname)\n",
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"data/train_label.csv\")\n",
     "test = pd.read_csv(\"data/sample_submission.csv\")\n",
-    "config = Config(sampling_rate=44100, audio_duration=4, n_folds=10, \n",
-    "                learning_rate=0.001, use_mfcc=False, n_mfcc=64) #mfcc=4,40 , fbank=12,128 audio_duration,audio_duration"
+    "config = Config(sampling_rate=44100, audio_duration=3, n_folds=10, \n",
+    "                learning_rate=0.001, use_mfcc=False, n_mfcc=60) #mfcc=4,40 , fbank=12,128 audio_duration,audio_duration"
    ]
   },
   {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "scrolled": true
    },
@@ -405,25 +405,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9473it [07:31, 20.99it/s]\n",
-      "6226it [04:52, 21.32it/s]"
+      "9473it [03:38, 43.39it/s]\n",
+      "9400it [03:24, 45.95it/s]\n"
      ]
     }
    ],
    "source": [
-    "X_train = prepare_data(train, config, 'data/audio_train/')\n",
-    "X_test = prepare_data(test, config, 'data/audio_test/')\n",
+    "X_train = prepare_data_old(train, config, 'data/audio_train/')\n",
+    "X_test = prepare_data_old(test, config, 'data/audio_test/')\n",
     "# y_train = to_categorical(train.label_idx, num_classes=config.n_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('feature/mfcc5/X_train.npy',X_train)\n",
-    "np.save('feature/mfcc5/X_test.npy',X_test)"
+    "np.save('feature/mfcc7/X_train.npy',X_train)\n",
+    "np.save('feature/mfcc7/X_test.npy',X_test)"
    ]
   },
   {
