update deadline and to-do for co-train

--- a/leo/LGD_Phase1Stage3_labelSpreading.ipynb
+++ b/leo/LGD_Phase1Stage3_labelSpreading.ipynb
@@ -640,12 +640,22 @@
    "metadata": {},
    "source": [
     "## Ens Verified\n",
+    "### step2\n",
     "* threshold = 0.5 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_type='mfcc7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -654,12 +664,13 @@
        "9400"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#encoder ens\n",
     "df_un_ans = pd.DataFrame()\n",
     "for fold in range(10):\n",
     "#     un_ans = np.load('feature/fbank4/semi/Y_un_dense'+str(fold)+'.npy') #unverified data\n",
@@ -676,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -724,13 +735,13 @@
     "# X_un_ver = X_un[take_list]\n",
     "Y_un_ver = np.array(take_label)\n",
     "# np.save('feature/mfcc6/semi/fbank4/X_un_ver.npy',X_un_ver)\n",
-    "pickle.dump(take_list,open('feature/mfcc6/semi/fbank4/X_un_ver_list.pkl','wb'))\n",
-    "np.save('feature/mfcc6/semi/fbank4/Y_un_ver.npy',Y_un_ver)"
+    "pickle.dump(take_list,open('feature/'+feature_type+'/semi/fbank4/X_un_ver_list.pkl','wb'))\n",
+    "np.save('feature/'+feature_type+'/semi/fbank4/Y_un_ver.npy',Y_un_ver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -746,8 +757,8 @@
     "# X_test_ver = X_test[take_list]\n",
     "Y_test_ver = np.array(take_label)\n",
     "# np.save('feature/mfcc6/semi/fbank4/X_test_ver.npy',X_test_ver)\n",
-    "pickle.dump(take_list,open('feature/mfcc6/semi/fbank4/X_test_ver_list.pkl','wb'))\n",
-    "np.save('feature/mfcc6/semi/fbank4/Y_test_ver.npy',Y_test_ver)"
+    "pickle.dump(take_list,open('feature/'+feature_type+'/semi/fbank4/X_test_ver_list.pkl','wb'))\n",
+    "np.save('feature/'+feature_type+'/semi/fbank4/Y_test_ver.npy',Y_test_ver)"
    ]
   },
   {
@@ -790,6 +801,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
   },
   {
    "cell_type": "code",
