--- a/leo/preprocessing_featureExtracting.ipynb
+++ b/leo/preprocessing_featureExtracting.ipynb
@@ -391,7 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MFCC / Fbank"
+    "## MFCC / Fbank\n",
+    "### step0"
    ]
   },
   {
