--- a/leo/LGD_Phase1_pre_10foldVerified.ipynb
+++ b/leo/LGD_Phase1_pre_10foldVerified.ipynb
@@ -1,20 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/leoqaz12/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "source": [
+    "### step1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from random import shuffle\n",
@@ -84,7 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_type='mfcc7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -96,43 +102,43 @@
       "['001ca53d.wav' '0033e230.wav' '00353774.wav' ... 'ffd6b26c.wav'\n",
       " 'ffda1d2b.wav' 'fff81f55.wav']\n",
       "Saving fold 1\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 2\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 3\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 4\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 5\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 6\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 7\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 8\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 9\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n",
       "Saving fold 10\n",
-      "X.shape: (371, 64, 431, 1)\n",
+      "X.shape: (371, 60, 259, 1)\n",
       "y.shape: (371, 41)\n",
       "fname.shape: (371,)\n"
      ]
@@ -143,7 +149,7 @@
     "map_path = 'data/map.pkl'#sys.argv[1]\n",
     "\n",
     "# base_path = directory of all the data (train_label.csv, X_train.npy)\n",
-    "base_path = 'feature/mfcc6/'#sys.argv[2]\n",
+    "base_path = 'feature/'+feature_type+'/'#sys.argv[2]\n",
     "\n",
     "# num_fold\n",
     "num_fold = 10#int(sys.argv[3])\n",
@@ -234,12 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.load('feature/mfcc6/X_test.npy')\n",
-    "X_all = np.load('feature/mfcc6/X_train.npy')"
+    "X_test = np.load('feature/'+feature_type+'/X_test.npy')\n",
+    "X_all = np.load('feature/'+feature_type+'/X_train.npy')"
    ]
   },
   {
@@ -264,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18873, 64, 431, 1)\n"
+      "(18873, 60, 259, 1)\n"
      ]
     }
    ],
@@ -365,7 +371,7 @@
     }
    ],
    "source": [
-    "range_"
+    "range_.shape"
    ]
   },
   {
@@ -391,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('feature/mfcc6/mean.npy',mean)\n",
-    "np.save('feature/mfcc6/std.npy',std)\n",
-    "np.save('feature/mfcc6/min.npy',min_)\n",
-    "np.save('feature/mfcc6/range.npy',range_)"
+    "np.save('feature/'+feature_type+'/mean.npy',mean)\n",
+    "np.save('feature/'+feature_type+'/std.npy',std)\n",
+    "np.save('feature/'+feature_type+'/min.npy',min_)\n",
+    "np.save('feature/'+feature_type+'/range.npy',range_)"
    ]
   },
   {
@@ -433,12 +439,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Semi: fbank4 + mfcc6"
+    "## Semi: fbank4 + mfcc6\n",
+    "### step3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# feature_type='mfcc7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +462,7 @@
     "map_path = 'data/map.pkl'#sys.argv[1]\n",
     "\n",
     "# base_path = directory of all the data (train_label.csv, X_train.npy)\n",
-    "base_path = 'feature/mfcc6/'#sys.argv[2]\n",
+    "base_path = 'feature/'+feature_type+'/'#sys.argv[2]\n",
     "\n",
     "\n",
     "with open(map_path, 'rb') as f:\n",
@@ -498,54 +514,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "take_list = np.load('feature/mfcc6/semi/fbank4/X_un_ver_list.pkl')\n",
+    "take_list = np.load('feature/'+feature_type+'/semi/fbank4/X_un_ver_list.pkl')\n",
     "X_un_ver = X_un[take_list]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(41, 64, 431, 1)"
+       "(41, 60, 259, 1)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test = np.load('feature/mfcc6/X_test.npy')\n",
-    "take_list = np.load('feature/mfcc6/semi/fbank4/X_test_ver_list.pkl')\n",
+    "X_test = np.load('feature/'+feature_type+'/X_test.npy')\n",
+    "take_list = np.load('feature/'+feature_type+'/semi/fbank4/X_test_ver_list.pkl')\n",
     "X_test_ver = X_test[take_list]\n",
     "X_test_ver.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(38, 64, 431, 1) (41, 64, 431, 1)\n"
+      "(38, 60, 259, 1) (41, 60, 259, 1)\n"
      ]
     }
    ],
    "source": [
     "print(X_un_ver.shape,X_test_ver.shape)\n",
-    "np.save('feature/mfcc6/semi/fbank4/X_test_ver.npy',X_test_ver)\n",
-    "np.save('feature/mfcc6/semi/fbank4/X_un_ver.npy',X_un_ver)"
+    "np.save('feature/'+feature_type+'/semi/fbank4/X_test_ver.npy',X_test_ver)\n",
+    "np.save('feature/'+feature_type+'/semi/fbank4/X_un_ver.npy',X_un_ver)"
    ]
   }
  ],
